--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "appzcoder/laravel-admin": "^3.0",
         "barryvdh/laravel-ide-helper": "^2.5",
         "fideloper/proxy": "^4.0",
+        "gloudemans/shoppingcart": "^2.5",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0"
     },
